# basic-toy

./: .editorconfig  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: pre-commit-checks.yaml  run-test-suite.yaml
examples/: fibonacci.bas  fizzbuzz.bas  robots.bas
rwbasic/: __init__.py  __main__.py  _analysis.py  _expressions.py  exceptions.py  grammar.lark  interpreter.py  parser.py  repl.py  tool.py  values.py
tests/: conftest.py  test_case_of.py  test_def_fn.py  test_def_proc.py  test_expression.py  test_for_loop.py  test_if_then.py  test_line_definitions.py  test_print_statement.py  test_programs.py  test_repeat_until.py  test_repl.py  test_run_module.py  test_statements.py  test_variables.py  test_while_wend.py
