[tool.poetry]
name = "rwbasic"
version = "0.1.0"
description = "Experiment in a BASIC-like language"
authors = ["Rich Wareham <rich@richwareham.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "rwbasic"}]

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 99

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = true
