[tool.poetry]
name = "rwbasic"
version = "0.1.0"
description = "Experiment in a BASIC-like language"
authors = ["Rich Wareham <rich@richwareham.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "rwbasic"}]
include = ["rwbasic/*.lark"]

[tool.poetry.scripts]
rwbasic = "rwbasic:main"

[tool.poetry.dependencies]
python = "^3.10"
lark = "^1.1.5"
structlog = "^23.1.0"
numpy = "^1.25.1"
prompt-toolkit = "^3.0.39"
better-exceptions = "^0.3.3"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.11.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 99

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "--cov rwbasic --cov-report term --cov-report html"
